--- a/package.json
+++ b/package.json
@@ -5,13 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    /*hoja index
     "build-css": "node-sass --include-path scss scss/estilos.scss css/main.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\""
-  },
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+    
+    //hoja sobre nosotros
+    "build-css": "node-sass --include-path scss scss/nosotros.scss css/nosotros.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+
+    //hoja egresados//
+    "build-css": "node-sass --include-path scss scss/egresados.scss css/egresado.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",*/
+
+    //hoja egresados//
+    "build-css": "node-sass --include-path scss scss/carreras.scss css/carreras.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+
+  }
+  ,
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^7.0.1",
-    "nodemon": "^2.0.15"
+  "node-sass": "^7.0.1",
+  "nodemon": "^2.0.15"
   }
 }
