--- a/package.json
+++ b/package.json
@@ -5,21 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    /*hoja index
-    "build-css": "node-sass --include-path scss scss/estilos.scss css/main.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
-    
-    //hoja sobre nosotros
-    "build-css": "node-sass --include-path scss scss/nosotros.scss css/nosotros.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
 
-    //hoja egresados//
-    "build-css": "node-sass --include-path scss scss/egresados.scss css/egresado.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\"",*/
 
-    //hoja egresados//
-    "build-css": "node-sass --include-path scss scss/carreras.scss css/carreras.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+    "build-css": "node-sass --include-path scss scss/inscripciones.scss css/inscripciones.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
 
   }
   ,
