--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
 
 
-    "build-css": "node-sass --include-path scss scss/estilos.scss css/main.css",
+    "build-css": "node-sass --include-path scss scss/egresados.scss css/egresado.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
 
   }
